--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,12 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.google.firebaseå:firebase-database:10.0.1'
-    testCompile 'junit:junit:4.12'
+    compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.google.android.gms:play-services-maps:10.0.1'
+    compile 'com.google.android.gms:play-services:10.0.1'
+    testCompile 'junit:junit:4.12'
 }
+
 
 
 apply plugin: 'com.google.gms.google-services'
