--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,13 @@ dependencies {
     compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.google.android.gms:play-services-maps:10.0.1'
     compile 'com.google.android.gms:play-services:10.0.1'
+    compile 'com.android.support:gridlayout-v7:25.1.0'
+    compile 'com.roughike:bottom-bar:1.3.3'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:support-v4:23.4.0'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
