--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,8 @@
 
         <activity
             android:name=".MapActivity"
-            android:label="@string/title_activity_google_maps_test"></activity>
+            android:label="@string/title_activity_google_maps_test" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
